<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Epiblog</string>
    <string name="registracija_uvod">Za uporabo aplikacije je najprej potrebna registracija. Prosim, da v spodnja okenca vpišete zahtevane podatke.</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="jemljeZdravila">Ali jemljete zdravila?</string>
    <string name="registracija">Registracija</string>
    <string name="filename_zgodovina">zgodovina.xml</string>
    <string name="filename_uporabnik">uporabnik.xml</string>
    <string name="tagname_dogodek">Dogodek</string>
    <string name="nov_vnos">Nov vnos</string>
    <string name="zgodovina">zgodovina</string>
    <string name="nastavitve">Test nastavitve</string>
    <string name="shrani">Shrani</string>
    <string name="opisdogodka_smsfailedstring">Napaka pri pošiljanju SMS</string>
    <string name="opisdogodka_uspesnoposlansms">SMS je bil poslan</string>
    <string name="shramba_tag_ime">Ime</string>
    <string name="shramba_tag_priimek">Priimek</string>
    <string name="shramba_tag_naslov">Naslov</string>
    <string name="shramba_tag_osebnastevilka">StevilkaOsebna</string>
    <string name="shramba_tag_zdravnikovastevilka">StevilkaZdravnika</string>
    <string name="shramba_tag_zdravila">Zdravila</string>
    <string name="shramba_tag_zgodovina">Zgodovina</string>
    <string name="shramba_tag_dogodek">Dogodek</string>
    <string name="shramba_tag_trajanje">Trajanje</string>
    <string name="shramba_tag_cas">Cas</string>
    <string name="shramba_tag_intenzivnosst">Intenzivnost</string>
    <string name="shramba_tag_sprozilci">Sprozilci</string>
    <string name="shramba_tag_uporabnik">Uporabnik</string>
    <string name="nov_vnos_datum">1. Izberite datum napada</string>
    <string name="nov_vnos_trajanje_napada">3. Trajanje napada (minute)</string>
    <string name="nov_vnos_intenzivnost">4. Intenzivnost od 1 do 10</string>
    <string name="nov_vnos_sprozilci_napada">5. Možni sprožilci napada</string>
    <string name="nov_vnos_intro">Izpolnite čim več informacij o napadu</string>
    <string name="test_datum">JAN 01 2020</string>
    <string name="nov_vnos_ura_napada">2. Izberite uro napada</string>
    <string name="test_ura">14:33</string>
    <string name="opis_dogodka_datum_ura">Datum in ura napada</string>
    <string name="opis_dogodka_trajanje">Trajanje napada</string>
    <string name="opis_dogodka_intenzivnost">Intenzivnost napada</string>
    <string name="opis_dogodka_sprozilci">Možni sprožilci napada</string>
    <string name="xml_dodaj">Dodaj</string>
    <string name="xml_1_cas_napada">1. Čas napada</string>
    <string name="xml_2_trajanje_napada">2. Trajanje napada</string>
    <string name="xml_3_intenzivnost">3. Intenzivnost</string>
    <string name="xml_nazaj">Nazaj</string>
    <string name="xml_poslji_sms">Pošlji sms</string>
    <string name="xml_izpolnite_cim_vec_informacij">Izpolnite čim več informacij</string>
    <string name="xml_shrani">SHRANI</string>
    <string name="xml_ni_shranjene_zgodovine">Ni shranjene zgodovine</string>
    <string name="shramba_tag_id">Id</string>
    <string name="xml_izbrisi">Izbriši</string>
    <string name="registracija_ime_hint">Ime</string>
    <string name="registracija_priimek_hint">Priimek</string>
    <string name="registracija_naslov_hint">Naslov</string>
    <string name="registracija_osebna_stevilka_hint">Osebna številka</string>
    <string name="registracija_stevilka_zdravnika_hint">Številka osebnega zdravnika</string>
    <string name="registracija_zdravila_hint">Zdravila, ki jih jemljete</string>
    <string name="zgodovina_ni_vnosov">Ni shranjene zgodovine</string>
    <string name="zgodovina_trajanje_napada">Trajanje napada:</string>
    <string name="zgodovina_datum_in_ura">Datum in ura:</string>
    <string name="zgodovina_intenzivnost">Intenzivnost:</string>
    <string name="zgodovina_sprozilci">Sprožilci:</string>
    <string name="opis_dogodka_4_sprozilci">4. Sprožilci</string>
    <string name="opis_dogodka_header">Podatki o dogodku</string>
    <string name="opis_dogodka_izbrisi">Izbriši dogodek</string>
    <string name="xml_danasnji_datum">Današnji datum:</string>
    <string name="validacija_ime">Vpišite svoje ime</string>
    <string name="validacija_priimek">Vpišite svoje priimek</string>
    <string name="validacija_osebni_zdravnik">Vpišite številko svojega osebnega skrbnika</string>
    <string name="opis_dogodka_stevilka_sms">SMS bo poslan na številko:</string>
    <string name="placeholder_datum">prazno</string>
    <string name="placeholder_st_napadov">prazno</string>
    <string name="placeholder_ime">"prazno"</string>
    <string name="placeholder_naslov">"prazno"</string>
    <string name="user_picture">user picture</string>
    <string name="dummy">dummy</string>
    <string name="navbar_nastavitve">Nastavitve</string>
    <string name="navbar_profil">Profil</string>
    <string name="navbar_zgodovina">Zgodovina</string>

</resources>