<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/navigation_dummyitem"
        android:title="@string/dummy"
        android:visible="false"/>
    <item
        android:onClick="clickedNastavitve"
        android:id="@+id/navigation_nastavitve"
        android:icon="@drawable/ic_settings"
        android:title="@string/navbar_nastavitve"

        />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_home"
        android:onClick="clickedProfil"
        android:title="@string/navbar_profil" />

    <item
        android:id="@+id/navigation_zgodovina"
        android:icon="@drawable/ic_history"
        android:onClick="clickedZgodovina"
        android:title="@string/navbar_zgodovina" />

</menu>