<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <TextView android:id="@+id/nov_vnos_opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_intro"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <TextView android:id="@+id/nov_vnos_cas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_datum"
        android:paddingBottom="10dp"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/nov_vnos_datum"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/test_datum"
        android:textSize="20sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:onClick="izberi_datum"/>

    <TextView android:id="@+id/nov_vnos_ura_napada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_ura_napada"
        android:paddingBottom="10dp"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/nov_vnos_ura"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/test_ura"
        android:textSize="20sp"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        android:onClick="izberi_uro"/>

    <TextView android:id="@+id/nov_vnos_trajanje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_trajanje_napada"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <EditText android:id="@+id/nov_vnos_vnesi_trajanje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:inputType="number"/>

    <TextView android:id="@+id/nov_vnos_intenzivnost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_intenzivnost"
        android:paddingTop="16dp"
        android:textSize="16sp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/nov_vnos_vnesi_intenzivnost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        android:value="0.0"
        android:stepSize="1"/>

    <TextView android:id="@+id/nov_vnos_sprozilci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nov_vnos_sprozilci_napada"
        android:paddingTop="16dip"
        android:textSize="16sp"/>

    <EditText android:id="@+id/nov_vnos_vnesi_sprozilci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingTop="16dip"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <Button
            android:id="@+id/opis_dogodka_nazaj"
            android:onClick="pojdi_nazaj"
            android:text="@string/xml_nazaj"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/nov_vnos_gumb_dodaj"
            android:layout_height="60dp"
            android:layout_width="wrap_content"
            android:onClick="nov_vnos_shrani"
            android:text="@string/xml_dodaj"
            android:textSize="20dp"
            android:layout_margin="20dp"/>

    </LinearLayout>
</LinearLayout>

</ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/app_bar_menu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:menu="@menu/app_bar_menu"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>