<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"

    >
    <TextView
        android:id="@+id/registracijaUvod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="16dip"
        android:textSize="16sp"
        android:text="@string/registracija_uvod"
 />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="imePriimek"
        android:id="@+id/imePriimek"
        android:hint="Ime in priimek"
        android:paddingTop="16dp"

        />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="naslov"
        android:id="@+id/naslov"
        android:hint="Naslov"
        android:paddingTop="16dp"

        />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="datumRojstva"
        android:id="@+id/datumRojstva"
        android:hint="Datum rojstva"

        />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="osebniZdravnik"
        android:id="@+id/osebniZdravnik"
        android:hint="Številka osebnega zdravnika"

        />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/jemljeZdravila"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="16dip"
        android:textSize="16sp"
        android:text="@string/jemljeZdravila"
        />
    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da"
            android:textSize="16sp"
            android:id="@+id/daZdravila" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ne"
            android:textSize="16sp"
            android:id="@+id/neZdravila" />

    </RadioGroup>
    <EditText
        android:id="@+id/zdravila"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:name="zdravila"
        android:paddingTop="16dip"
        android:layout_marginTop="20dp"
        android:hint="Zdravila, ki jih jemljete"
        />

    <Button
    android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registracija_gumb"
        android:text="@string/registracija"
        android:onClick="nov_uporabnik_shrani"/>
</LinearLayout>

